Support for pushing  custom buildout directories

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,6 +23,8 @@ plone_buildout_git_repo:
 
 plone_buildout_git_version: master
 
+plone_buildout_directory:
+
 plone_initial_password:
 
 plone_install_zeoserver: yes
@@ -151,6 +153,7 @@ instance_config:
   plone_instance_name: "{{ plone_config.plone_instance_name|default(plone_instance_name) }}"
   plone_buildout_git_repo: "{{ plone_config.plone_buildout_git_repo|default(plone_buildout_git_repo) }}"
   plone_buildout_git_version: "{{ plone_config.plone_buildout_git_version|default(plone_buildout_git_version) }}"
+  plone_buildout_directory: "{{ plone_config.plone_buildout_directory|default(plone_buildout_directory) }}"
   plone_initial_password: "{{ plone_config.plone_initial_password|default(plone_initial_password) }}"
   plone_client_count: "{{ plone_config.plone_client_count|default(plone_client_count) }}"
   plone_zodb_cache_size: "{{ plone_config.plone_zodb_cache_size|default(plone_zodb_cache_size) }}"
