--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -373,7 +373,7 @@
   when: plone_pack_at
   cron:
     name="{{ instance_config.plone_instance_name }} Plone packing"
-    job='cd {{ plone_instance_home }} && bin/zeopack && echo "zeopack""_success for {{ instance_config.plone_instance_name }}"'
+    job='cd {{ plone_instance_home }} && bin/zeopack'
     user={{ instance_config.plone_daemon_user }}
     minute={{ item.minute }}
     hour={{ item.hour }}
@@ -385,7 +385,7 @@
   when: plone_backup_at
   cron:
     name="{{ instance_config.plone_instance_name }} Plone backup"
-    job='cd {{ plone_instance_home }} && bin/backup && echo "backup""_success for {{ instance_config.plone_instance_name }}"'
+    job='cd {{ plone_instance_home }} && bin/backup'
     user={{ instance_config.plone_daemon_user }}
     minute={{ item.minute }}
     hour={{ item.hour }}
